# animebot

./: README.md  domain.yml  pyproject.toml
actions/: actions.py
data/: nlu.yml  rules.yml  stories.yml
