[tool.poetry]
name = "animebot"
version = "0.1.0"
description = ""
authors = ["Errabii Sohaib <Sohaib.Errabii@bordeaux-inp.fr>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
rasa = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
